PDFBOX-5607: replace deprecated URL constructor
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1909949 13f79535-47bb-0310-9956-ffa450edef68