@@ -21,6 +21,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -128,8 +130,10 @@ public class OcspHelper
      * @throws IOException
      * @throws OCSPException
      * @throws RevokedCertificateException
+     * @throws URISyntaxException
      */
-    public OCSPResp getResponseOcsp() throws IOException, OCSPException, RevokedCertificateException
+    public OCSPResp getResponseOcsp()
+            throws IOException, OCSPException, RevokedCertificateException, URISyntaxException
     {
         OCSPResp ocspResponse = performRequest(ocspUrl);
         verifyOcspResponse(ocspResponse);
@@ -451,11 +455,13 @@ public class OcspHelper
      * @return the OCSPResp, that has been fetched from the ocspUrl
      * @throws IOException
      * @throws OCSPException
+     * @throws URISyntaxException
      */
-    private OCSPResp performRequest(String urlString) throws IOException, OCSPException
+    private OCSPResp performRequest(String urlString)
+            throws IOException, OCSPException, URISyntaxException
     {
         OCSPReq request = generateOCSPRequest();
-        URL url = new URL(urlString);
+        URL url = new URI(urlString).toURL();
         HttpURLConnection httpConnection = (HttpURLConnection) url.openConnection();
         try
         {
